--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.0.19",
     "postcss": "^8.4.47",
-    "sass-embedded": "^1.83.4",
+    "sass": "^1.71.0",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
